--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       - back-tier
 
   redis:
-    image: redis:alpine
+    image: redis:3.0
     volumes:
       - "./healthchecks:/healthchecks"
     healthcheck:
